update sw, add jumpo content, fix quote

--- a/assets/css/less/cart-packages.less
+++ b/assets/css/less/cart-packages.less
@@ -17,6 +17,8 @@
                 margin-bottom: 15px;
                 font-size: 20px;
                 font-weight: 800;
+                height: 50px;
+                overflow: hidden;
             }
 
             p {
